IMPLEMENTAION-(MENUS)- Implementation of wraps section + Fix images bottom bug

--- a/menus_style.css
+++ b/menus_style.css
@@ -122,7 +122,7 @@
         type1_container .I2 .img-container {
             width: 50%;
             padding: 3px;
-            background-color: #85AAAA;
+            background-color: black;
             align-items: center;
             justify-content: center;
             margin-right: 10px;
@@ -131,6 +131,7 @@
             width: 100%;
             align-items: center;
             justify-content: center;
+            margin-bottom: -1.5%;
         }
 
         type2_container {
@@ -170,6 +171,7 @@
         }
         type2_container .img-container img {
             width: 100%;
+            margin-bottom: -1.5%;
         }
         type2_container h1{
                 position: relative;
@@ -292,6 +294,7 @@
             width: 100%;
             align-items: center;
             justify-content: center;
+            margin-bottom: -1.5%;
         }
 
 
@@ -314,7 +317,7 @@
             padding-right: 15px;
             font-weight: bold;
             font-style: italic;
-            top: -6px;
+            top: -15px;
         }
 
         type4_container .I2{
@@ -322,6 +325,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            top: -20px;
         }
 
         type4_container .I2 .text-container{
@@ -363,7 +367,7 @@
         type4_container .I2 .img-container {
             width: 50%;
             padding: 3px;
-            background-color: #85AAAA;
+            background-color: black;
             align-items: center;
             justify-content: center;
             margin-left: 10px;
@@ -372,6 +376,7 @@
             width: 100%;
             align-items: center;
             justify-content: center;
+            margin-bottom: -1.5%;
         }
         a {
             text-decoration: none;
